--- a/css/styles.css
+++ b/css/styles.css
@@ -12,24 +12,15 @@ ul{
 }
 .header{
     background-color: #ffffff;
+    border: 1px solid black;
 }
-.header-container {
+.container {
   max-width: 1158px;
-  padding: 0 15px;
-  margin: 0 auto;
+  padding: 0;
+  margin: auto 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid rgba 255, 0, 0, 0.2;
-}
-.nav-wrapper{
-    display: flex;
-    align-items: center;
-}
-.logo-wrapper{
-    display: flex;
-    align-items: center;
-    margin-right: 76px;
 }
 .logo-header{
     font-family: "Raleway", sans-serif;
@@ -39,7 +30,8 @@ ul{
     letter-spacing: 0.03em;
     color:#4d5ae5;
     text-transform: uppercase;
-    display: inline-block;
+    padding-left: 157px;
+    padding-right: 76px;
 }
 .logo-studio{
     color: #2e2f42;
@@ -56,6 +48,8 @@ ul{
     gap: 40px;
     margin: 0;
     padding: 0;
+    margin-top: 24px;
+    margin-bottom: 24px;
 }
 .nav-link{
     text-decoration: none;
@@ -73,11 +67,14 @@ ul{
     letter-spacing: 0.02em;
 }
 .contacts-list{
-    list-style-type: none;
+    list-style-type: none; 
+    margin: 0;
+    display: flex;
+    gap: 40px;
 }
 .contact-link{
     text-decoration: none;
-    color:#434455;
+    color:#434455; 
 }
 .contact-link:hover, .contact-link:focus{
     color: #404BBF;
