--- a/css/styles.css
+++ b/css/styles.css
@@ -5,36 +5,54 @@
   background-color: #ffffff;
 }
 a{
-    text-decoration: none;
+    text-decoration: none;;
 }
 ul{
     text-decoration: none;
 }
+li{
+    margin: 0;
+}
+p{
+    margin: 0;
+}
+h1 h2 h3 h4 h5 h6{
+    margin: 0;
+}
 .header{
-    background-color: #ffffff;
+   background-color: #ffffff;
     border: 1px solid black;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
 }
 .container {
   max-width: 1158px;
-  padding: 0;
-  margin: auto 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
 }
 .logo-header{
-    font-family: "Raleway", sans-serif;
+  font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
-    color:#4d5ae5;
+    color: #4d5ae5;
     text-transform: uppercase;
-    padding-left: 157px;
-    padding-right: 76px;
+    text-decoration: none;
+    margin-right: 76px;
 }
 .logo-studio{
     color: #2e2f42;
+}
+.nav{
+    flex-grow: 1;
 }
 .nav-list{
     font-family: "Roboto", sans-serif;
@@ -45,6 +63,7 @@ ul{
     color:#434455;
     list-style-type: none;
     display: flex;
+    align-items: center;
     gap: 40px;
     margin: 0;
     padding: 0;
@@ -67,9 +86,11 @@ ul{
     letter-spacing: 0.02em;
 }
 .contacts-list{
-    list-style-type: none; 
+    list-style-type: none;
     margin: 0;
+    padding: 0;
     display: flex;
+    align-items: center;
     gap: 40px;
 }
 .contact-link{
@@ -85,29 +106,51 @@ ul{
     text-align: center;
     letter-spacing: 0.02em;
 }
+.hero .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 .hero-title{
     font-size: 56px;
     line-height: 1.07;
     color: #FFFFFF;
     margin-bottom: 48px;
     letter-spacing: 0.02em;
+    width: 496px;
+    height: 120px;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 188px;
+    margin-bottom: 48px;
 }
 .hero-button{
     font-family: "Roboto", sans-serif;
     letter-spacing: 0.04em;
     font-weight: 500;
     font-size: 16px;
-  line-height: 1.5;
-  color: #FFFFFF;
-  background-color: #4D5AE5;
-  border:none;
-  cursor: pointer;
+    line-height: 1.5;
+    color: #FFFFFF;
+    background-color: #4D5AE5;
+    border:none;
+    cursor: pointer;
+    width: 169px;
+    height: 56px;
+    border-radius: 4px;
+    margin-bottom: 188px;
 }
 .hero-button:hover, .hero-button:focus{
     background-color: #404BBF;
 }
 .advantages-list{
     list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 24px;
+    justify-content: center;
+    margin-top: 120px;
 }
 .advantages-subtitle{
     font-family: "Roboto", sans-serif;
@@ -125,12 +168,21 @@ ul{
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
+.advantages-item{
+  width:calc((100% - 72px) / 4);
+}
 .our-team{
     font-family: "Roboto", sans-serif;
     background-color: #F4F4FD;
 }
 .our-team-list{
     background-color:#FFFFFF;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 24px;
+    justify-content: center;
 }
 .our-team-title{
     font-weight: 700;
@@ -141,9 +193,13 @@ ul{
     letter-spacing: 0.02em;
     text-transform: capitalize;
     background-color:#FFFFFF;
+    text-align: center;
+    margin-top: 120px;
+    margin-bottom: 72px;
 }
 .our-team-item{
     background-color:#FFFFFF;
+    width:calc((100% - 72px) / 4);
 }
 .our-team-name{
     font-weight: 500;
