--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
   font-family: "Roboto", sans-serif;
   color:#434455;
   background-color: #ffffff;
+  width: 100%;
 }
 a{
     text-decoration: none;;
@@ -19,23 +20,26 @@ p{
 h1 h2 h3 h4 h5 h6{
     margin: 0;
 }
-.header{
+.header {
    background-color: #ffffff;
     border: 1px solid black;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
 }
-.container {
+.container {   
   max-width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+}
+.container-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0;
 }
 .logo-header{
   font-family: "Raleway", sans-serif;
@@ -46,13 +50,13 @@ h1 h2 h3 h4 h5 h6{
     color: #4d5ae5;
     text-transform: uppercase;
     text-decoration: none;
+    display: flex;
     margin-right: 76px;
+    margin-top: 24px;
+    margin-bottom: 24px;
 }
 .logo-studio{
     color: #2e2f42;
-}
-.nav{
-    flex-grow: 1;
 }
 .nav-list{
     font-family: "Roboto", sans-serif;
@@ -63,7 +67,6 @@ h1 h2 h3 h4 h5 h6{
     color:#434455;
     list-style-type: none;
     display: flex;
-    align-items: center;
     gap: 40px;
     margin: 0;
     padding: 0;
@@ -90,8 +93,10 @@ h1 h2 h3 h4 h5 h6{
     margin: 0;
     padding: 0;
     display: flex;
-    align-items: center;
     gap: 40px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+
 }
 .contact-link{
     text-decoration: none;
@@ -150,7 +155,7 @@ h1 h2 h3 h4 h5 h6{
     flex-direction: row;
     gap: 24px;
     justify-content: center;
-    margin-top: 120px;
+    margin: 120px 0;
 }
 .advantages-subtitle{
     font-family: "Roboto", sans-serif;
@@ -174,15 +179,16 @@ h1 h2 h3 h4 h5 h6{
 .our-team{
     font-family: "Roboto", sans-serif;
     background-color: #F4F4FD;
+    padding: 120px 0;
 }
 .our-team-list{
-    background-color:#FFFFFF;
     list-style: none;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
     gap: 24px;
     justify-content: center;
+    padding: 0;
+    margin: 0;
 }
 .our-team-title{
     font-weight: 700;
@@ -192,14 +198,14 @@ h1 h2 h3 h4 h5 h6{
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    background-color:#FFFFFF;
     text-align: center;
-    margin-top: 120px;
     margin-bottom: 72px;
 }
 .our-team-item{
     background-color:#FFFFFF;
-    width:calc((100% - 72px) / 4);
+    object-fit: cover;
+    overflow: hidden;
+    width: calc((100% - 72px) / 4);
 }
 .our-team-name{
     font-weight: 500;
@@ -207,6 +213,8 @@ h1 h2 h3 h4 h5 h6{
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    text-align: center;
+    background-color:#FFFFFF;
 }
 .our-team-role{
     font-weight: 400;
@@ -214,6 +222,8 @@ h1 h2 h3 h4 h5 h6{
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    text-align: center;
+    background-color:#FFFFFF;
 }
 .portfolio{
      font-family: "Roboto", sans-serif;
