--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
   color:#434455;
   background-color: #ffffff;
   width: 100%;
+  min-height: 100vh;
 }
 a{
     text-decoration: none;;
@@ -26,6 +27,9 @@ h1 h2 h3 h4 h5 h6{
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
+}
+.main{
+    flex-grow: 1;
 }
 .container {   
   max-width: 1158px;
@@ -198,7 +202,6 @@ h1 h2 h3 h4 h5 h6{
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    text-align: center;
     margin-bottom: 72px;
 }
 .our-team-item{
@@ -227,6 +230,16 @@ h1 h2 h3 h4 h5 h6{
 }
 .portfolio{
      font-family: "Roboto", sans-serif;
+     padding: 120px 0;
+}
+.portfolio-item{
+    list-style-type: none;
+    object-fit: cover;
+    overflow: hidden;
+    width: calc((100%-48px) / 3);
+}
+.portfolio-item:nth-child(-n + 3){
+    margin-bottom: 24px;
 }
 .portfolio-title{
     font-weight: 700;
@@ -236,6 +249,15 @@ h1 h2 h3 h4 h5 h6{
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    margin-bottom: 72px;
+}
+.portfolio-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
 }
 .portfolio-subtitle{
     font-weight: 500;
@@ -253,7 +275,14 @@ h1 h2 h3 h4 h5 h6{
 }
 .footer{
     background-color: #2E2F42;
-      font-family: "Roboto", sans-serif;
+    font-family: "Roboto", sans-serif;
+    padding: 100px 0;
+}
+.container-footer{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
 }
 .footer-text{
     font-weight: 400;
@@ -261,6 +290,7 @@ h1 h2 h3 h4 h5 h6{
     font-size:16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    max-width: 264px;
 }
 .logo-footer {
     font-family: "Raleway", sans-serif;
