--- a/css/styles.css
+++ b/css/styles.css
@@ -1,52 +1,66 @@
+.body {
+    font-family: "Roboto", sans-serif;
+    color: #434455;
+    background-color: #ffffff;
+    width: 100%;
+    min-height: 100vh;
+}
 
-.body{
-  font-family: "Roboto", sans-serif;
-  color:#434455;
-  background-color: #ffffff;
-  width: 100%;
-  min-height: 100vh;
+a {
+    text-decoration: none;
+    ;
 }
-a{
-    text-decoration: none;;
-}
-ul{
+
+ul {
     text-decoration: none;
 }
-li{
+
+li {
     margin: 0;
 }
-p{
+
+p {
     margin: 0;
 }
-h1 h2 h3 h4 h5 h6{
+
+h1 h2 h3 h4 h5 h6 {
     margin: 0;
 }
+
 .header {
-   background-color: #ffffff;
+    background-color: #ffffff;
     border: 1px solid black;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
 }
-.main{
+
+.main {
     flex-grow: 1;
 }
-.container {   
-  max-width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
+
+.section {
+    padding: 120px 0;
 }
-.container-header{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0;
+
+.container {
+    max-width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
 }
-.logo-header{
-  font-family: "Raleway", sans-serif;
+
+.container-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0;
+}
+
+.logo-header {
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
@@ -59,16 +73,18 @@ h1 h2 h3 h4 h5 h6{
     margin-top: 24px;
     margin-bottom: 24px;
 }
-.logo-studio{
+
+.logo-studio {
     color: #2e2f42;
 }
-.nav-list{
+
+.nav-list {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
-    font-size:16px;
+    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color:#434455;
+    color: #434455;
     list-style-type: none;
     display: flex;
     gap: 40px;
@@ -77,22 +93,27 @@ h1 h2 h3 h4 h5 h6{
     margin-top: 24px;
     margin-bottom: 24px;
 }
-.nav-link{
+
+.nav-link {
     text-decoration: none;
     cursor: pointer;
-    color:#2e2f42 ;
+    color: #2e2f42;
 }
-.nav-link:hover, .nav-link:focus{
-    color:#404bbf;
+
+.nav-link:hover,
+.nav-link:focus {
+    color: #404bbf;
 }
-.contacts{
+
+.contacts {
     font-size: 16px;
     line-height: 1.5;
-    font-style:normal;
-    color:#434455;
+    font-style: normal;
+    color: #434455;
     letter-spacing: 0.02em;
 }
-.contacts-list{
+
+.contacts-list {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -102,26 +123,31 @@ h1 h2 h3 h4 h5 h6{
     margin-bottom: 24px;
 
 }
-.contact-link{
+
+.contact-link {
     text-decoration: none;
-    color:#434455; 
+    color: #434455;
 }
-.contact-link:hover, .contact-link:focus{
+
+.contact-link:hover,
+.contact-link:focus {
     color: #404BBF;
 }
 
-.hero{
+.hero {
     background-color: #2E2F42;
     text-align: center;
     letter-spacing: 0.02em;
 }
-.hero .container{
+
+.hero .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-.hero-title{
+
+.hero-title {
     font-size: 56px;
     line-height: 1.07;
     color: #FFFFFF;
@@ -134,7 +160,8 @@ h1 h2 h3 h4 h5 h6{
     margin-top: 188px;
     margin-bottom: 48px;
 }
-.hero-button{
+
+.hero-button {
     font-family: "Roboto", sans-serif;
     letter-spacing: 0.04em;
     font-weight: 500;
@@ -142,17 +169,20 @@ h1 h2 h3 h4 h5 h6{
     line-height: 1.5;
     color: #FFFFFF;
     background-color: #4D5AE5;
-    border:none;
+    border: none;
     cursor: pointer;
     width: 169px;
     height: 56px;
     border-radius: 4px;
     margin-bottom: 188px;
 }
-.hero-button:hover, .hero-button:focus{
+
+.hero-button:hover,
+.hero-button:focus {
     background-color: #404BBF;
 }
-.advantages-list{
+
+.advantages-list {
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
@@ -161,7 +191,8 @@ h1 h2 h3 h4 h5 h6{
     justify-content: center;
     margin: 120px 0;
 }
-.advantages-subtitle{
+
+.advantages-subtitle {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     color: #2E2F42;
@@ -169,23 +200,27 @@ h1 h2 h3 h4 h5 h6{
     line-height: 1.2;
     letter-spacing: 0.02em;
 }
-.advantages-text{
+
+.advantages-text {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
-    color:#434455;
+    color: #434455;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-.advantages-item{
-  width:calc((100% - 72px) / 4);
+
+.advantages-item {
+    width: calc((100% - 72px) / 4);
 }
-.our-team{
+
+.our-team {
     font-family: "Roboto", sans-serif;
     background-color: #F4F4FD;
     padding: 120px 0;
 }
-.our-team-list{
+
+.our-team-list {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
@@ -194,9 +229,10 @@ h1 h2 h3 h4 h5 h6{
     padding: 0;
     margin: 0;
 }
-.our-team-title{
+
+.our-team-title {
     font-weight: 700;
-    color:#2E2F42;
+    color: #2E2F42;
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
@@ -204,54 +240,62 @@ h1 h2 h3 h4 h5 h6{
     text-transform: capitalize;
     margin-bottom: 72px;
 }
-.our-team-item{
-    background-color:#FFFFFF;
+
+.our-team-item {
+    background-color: #FFFFFF;
     object-fit: cover;
     overflow: hidden;
     width: calc((100% - 72px) / 4);
 }
-.our-team-name{
+
+.our-team-name {
     font-weight: 500;
-    color:#2E2F42;
+    color: #2E2F42;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     text-align: center;
-    background-color:#FFFFFF;
+    background-color: #FFFFFF;
 }
-.our-team-role{
+
+.our-team-role {
     font-weight: 400;
-    color:#434455;
+    color: #434455;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
-    background-color:#FFFFFF;
+    background-color: #FFFFFF;
 }
-.portfolio{
-     font-family: "Roboto", sans-serif;
-     padding: 120px 0;
+
+.portfolio {
+    font-family: "Roboto", sans-serif;
+    padding: 120px 0;
 }
-.portfolio-item{
+
+.portfolio-item {
     list-style-type: none;
     object-fit: cover;
     overflow: hidden;
     width: calc((100%-48px) / 3);
 }
-.portfolio-item:nth-child(-n + 3){
+
+.portfolio-item:nth-child(-n + 3) {
     margin-bottom: 24px;
 }
-.portfolio-title{
+
+.portfolio-title {
     font-weight: 700;
-    color:#2E2F42;
-    font-size:36px;
+    color: #2E2F42;
+    font-size: 36px;
     line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     margin-bottom: 72px;
 }
-.portfolio-list{
+
+.portfolio-list {
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
@@ -259,39 +303,50 @@ h1 h2 h3 h4 h5 h6{
     padding: 0;
     margin: 0;
 }
-.portfolio-subtitle{
+
+.portfolio-subtitle {
     font-weight: 500;
-    color:#2E2F42;
-    font-size:20px;
+    color: #2E2F42;
+    font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
 }
-.portfolio-text{
+
+.portfolio-text {
     font-weight: 400;
-    color:#434455;
-    font-size:16px;
+    color: #434455;
+    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-.footer{
+
+.portfolio-border-text {
+    border: 1px solid #F4F4FD;
+    padding: 32px 16px;
+}
+
+.footer {
     background-color: #2E2F42;
     font-family: "Roboto", sans-serif;
     padding: 100px 0;
 }
-.container-footer{
+
+.container-footer {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     gap: 16px;
 }
-.footer-text{
+
+.footer-text {
     font-weight: 400;
-    color:#F4F4FD;
-    font-size:16px;
+    color: #F4F4FD;
+    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     max-width: 264px;
 }
+
 .logo-footer {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -299,9 +354,9 @@ h1 h2 h3 h4 h5 h6{
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color:#4d5ae5
+    color: #4d5ae5
 }
-.logo-studio-footer{
-    color:#f4f4fd;
+
+.logo-studio-footer {
+    color: #f4f4fd;
 }
-    
