--- a/css/styles.css
+++ b/css/styles.css
@@ -23,8 +23,11 @@ p {
     margin: 0;
 }
 
-h1 h2 h3 h4 h5 h6 {
+h1, h2, h3, h4, h5, h6 {
     margin: 0;
+}
+img{
+    display: block;
 }
 
 .header {
@@ -50,13 +53,13 @@ h1 h2 h3 h4 h5 h6 {
     margin: 0 auto;
 }
 
-.container-header {
+.header .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding-left: 15px;
     padding-right: 15px;
-    margin: 0;
+    margin: 0 auto;
 }
 
 .logo-header {
@@ -68,10 +71,8 @@ h1 h2 h3 h4 h5 h6 {
     color: #4d5ae5;
     text-transform: uppercase;
     text-decoration: none;
-    display: flex;
+    display: block;
     margin-right: 76px;
-    margin-top: 24px;
-    margin-bottom: 24px;
 }
 
 .logo-studio {
@@ -89,15 +90,14 @@ h1 h2 h3 h4 h5 h6 {
     display: flex;
     gap: 40px;
     margin: 0;
-    padding: 0;
-    margin-top: 24px;
-    margin-bottom: 24px;
 }
 
 .nav-link {
     text-decoration: none;
     cursor: pointer;
     color: #2e2f42;
+    display: block;
+    padding: 24px 0;
 }
 
 .nav-link:hover,
@@ -119,14 +119,13 @@ h1 h2 h3 h4 h5 h6 {
     padding: 0;
     display: flex;
     gap: 40px;
-    margin-top: 24px;
-    margin-bottom: 24px;
-
 }
 
 .contact-link {
     text-decoration: none;
     color: #434455;
+    display: block;
+    padding: 24px 0;
 }
 
 .contact-link:hover,
@@ -151,7 +150,6 @@ h1 h2 h3 h4 h5 h6 {
     font-size: 56px;
     line-height: 1.07;
     color: #FFFFFF;
-    margin-bottom: 48px;
     letter-spacing: 0.02em;
     width: 496px;
     height: 120px;
@@ -331,7 +329,7 @@ h1 h2 h3 h4 h5 h6 {
     padding: 100px 0;
 }
 
-.container-footer {
+.footer .container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
