--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,18 @@ img{
 .hero-button:focus {
     background-color: #404BBF;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+  white-space: nowrap;
+  border: 0;
+}
 
 .advantages-list {
     list-style-type: none;
@@ -254,6 +266,7 @@ img{
     letter-spacing: 0.02em;
     text-align: center;
     background-color: #FFFFFF;
+    padding-bottom: 8px;
 }
 
 .our-team-role {
@@ -311,18 +324,20 @@ img{
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    padding-bottom: 8px;
 }
-
 .portfolio-text {
     font-weight: 400;
     color: #434455;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding-bottom: 32px;
 }
 
 .portfolio-border-text {
     border: 1px solid #F4F4FD;
+    border-top: none;
     padding: 32px 16px;
 }
 
