--- a/css/styles.css
+++ b/css/styles.css
@@ -1,183 +1,187 @@
-.body {
-    font-family: "Roboto", sans-serif;
-    color: #434455;
-    background-color: #ffffff;
-    width: 100%;
-    min-height: 100vh;
+body {
+  font-family: "Roboto", sans-serif;
+  color: #434455;
+  background-color: #ffffff;
+  width: 100%;
+  min-height: 100vh;
 }
 
 a {
-    text-decoration: none;
-    ;
+  text-decoration: none;
 }
 
 ul {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 li {
-    margin: 0;
+  margin: 0;
 }
 
 p {
-    margin: 0;
+  margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
 }
-img{
-    display: block;
+img {
+  display: block;
 }
 
 .header {
-    background-color: #ffffff;
-    border: 1px solid black;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 0 auto;
+  background-color: #ffffff;
+  border: 1px solid black;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
 }
 
-.main {
-    flex-grow: 1;
+main {
+  flex-grow: 1;
 }
 
-.section {
-    padding: 120px 0;
+section {
+  padding: 120px 0;
 }
 
 .container {
-    max-width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 0 auto;
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
 }
 
 .header .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
 }
 
 .logo-header {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    color: #4d5ae5;
-    text-transform: uppercase;
-    text-decoration: none;
-    display: block;
-    margin-right: 76px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  color: #4d5ae5;
+  text-transform: uppercase;
+  text-decoration: none;
+  display: block;
+  margin-right: 76px;
 }
 
 .logo-studio {
-    color: #2e2f42;
+  color: #2e2f42;
 }
 
 .nav-list {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-    list-style-type: none;
-    display: flex;
-    gap: 40px;
-    margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  list-style-type: none;
+  display: flex;
+  gap: 40px;
+  margin: 0;
 }
 
 .nav-link {
-    text-decoration: none;
-    cursor: pointer;
-    color: #2e2f42;
-    display: block;
-    padding: 24px 0;
+  text-decoration: none;
+  cursor: pointer;
+  color: #2e2f42;
+  display: block;
+  padding: 24px 0;
 }
 
 .nav-link:hover,
 .nav-link:focus {
-    color: #404bbf;
+  color: #404bbf;
 }
 
 .contacts {
-    font-size: 16px;
-    line-height: 1.5;
-    font-style: normal;
-    color: #434455;
-    letter-spacing: 0.02em;
+  font-size: 16px;
+  line-height: 1.5;
+  font-style: normal;
+  color: #434455;
+  letter-spacing: 0.02em;
 }
 
 .contacts-list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 40px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 40px;
 }
 
 .contact-link {
-    text-decoration: none;
-    color: #434455;
-    display: block;
-    padding: 24px 0;
+  text-decoration: none;
+  color: #434455;
+  display: block;
+  padding: 24px 0;
 }
 
 .contact-link:hover,
 .contact-link:focus {
-    color: #404BBF;
+  color: #404bbf;
 }
 
 .hero {
-    background-color: #2E2F42;
-    text-align: center;
-    letter-spacing: 0.02em;
+  background-color: #2e2f42;
+  text-align: center;
+  letter-spacing: 0.02em;
 }
 
 .hero .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .hero-title {
-    font-size: 56px;
-    line-height: 1.07;
-    color: #FFFFFF;
-    letter-spacing: 0.02em;
-    width: 496px;
-    height: 120px;
-    text-align: center;
-    margin: 0 auto;
-    margin-top: 188px;
-    margin-bottom: 48px;
+  font-size: 56px;
+  line-height: 1.07;
+  color: #ffffff;
+  letter-spacing: 0.02em;
+  width: 496px;
+  height: 120px;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 188px;
+  margin-bottom: 48px;
 }
 
 .hero-button {
-    font-family: "Roboto", sans-serif;
-    letter-spacing: 0.04em;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    color: #FFFFFF;
-    background-color: #4D5AE5;
-    border: none;
-    cursor: pointer;
-    width: 169px;
-    height: 56px;
-    border-radius: 4px;
-    margin-bottom: 188px;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #ffffff;
+  background-color: #4d5ae5;
+  border: none;
+  cursor: pointer;
+  width: 169px;
+  height: 56px;
+  border-radius: 4px;
+  margin-bottom: 188px;
 }
 
 .hero-button:hover,
 .hero-button:focus {
-    background-color: #404BBF;
+  background-color: #404bbf;
 }
 .visually-hidden {
   position: absolute;
@@ -193,186 +197,186 @@ img{
 }
 
 .advantages-list {
-    list-style-type: none;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    gap: 24px;
-    justify-content: center;
-    margin: 120px 0;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 24px;
+  justify-content: center;
+  margin: 120px 0;
 }
 
 .advantages-subtitle {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    color: #2E2F42;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  color: #2e2f42;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 .advantages-text {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    color: #434455;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  color: #434455;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 .advantages-item {
-    width: calc((100% - 72px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 
 .our-team {
-    font-family: "Roboto", sans-serif;
-    background-color: #F4F4FD;
-    padding: 120px 0;
+  font-family: "Roboto", sans-serif;
+  background-color: #f4f4fd;
+  padding: 120px 0;
 }
 
 .our-team-list {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 24px;
-    justify-content: center;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
 }
 
 .our-team-title {
-    font-weight: 700;
-    color: #2E2F42;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    margin-bottom: 72px;
+  font-weight: 700;
+  color: #2e2f42;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
 .our-team-item {
-    background-color: #FFFFFF;
-    object-fit: cover;
-    overflow: hidden;
-    width: calc((100% - 72px) / 4);
+  background-color: #ffffff;
+  object-fit: cover;
+  overflow: hidden;
+  width: calc((100% - 72px) / 4);
 }
 
 .our-team-name {
-    font-weight: 500;
-    color: #2E2F42;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    text-align: center;
-    background-color: #FFFFFF;
-    padding-bottom: 8px;
+  font-weight: 500;
+  color: #2e2f42;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  background-color: #ffffff;
+  padding-bottom: 8px;
 }
 
 .our-team-role {
-    font-weight: 400;
-    color: #434455;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    text-align: center;
-    background-color: #FFFFFF;
+  font-weight: 400;
+  color: #434455;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  background-color: #ffffff;
 }
-.our-team-text-block{
-    padding: 32px 16px;
+.our-team-text-block {
+  padding: 32px 16px;
 }
 
 .portfolio {
-    font-family: "Roboto", sans-serif;
-    padding: 120px 0;
+  font-family: "Roboto", sans-serif;
+  padding: 120px 0;
 }
 
 .portfolio-item {
-    list-style-type: none;
-    object-fit: cover;
-    overflow: hidden;
-    width: calc((100%-48px) / 3);
+  list-style-type: none;
+  object-fit: cover;
+  overflow: hidden;
+  width: calc((100%-48px) / 3);
 }
 
 .portfolio-item:nth-child(-n + 3) {
-    margin-bottom: 24px;
+  margin-bottom: 24px;
 }
 
 .portfolio-title {
-    font-weight: 700;
-    color: #2E2F42;
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    margin-bottom: 72px;
+  font-weight: 700;
+  color: #2e2f42;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
 .portfolio-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 24px;
-    justify-content: center;
-    padding: 0;
-    margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
 }
 
 .portfolio-subtitle {
-    font-weight: 500;
-    color: #2E2F42;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    padding-bottom: 8px;
+  font-weight: 500;
+  color: #2e2f42;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  padding-bottom: 8px;
 }
 .portfolio-text {
-    font-weight: 400;
-    color: #434455;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    padding-bottom: 32px;
+  font-weight: 400;
+  color: #434455;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding-bottom: 32px;
 }
 
 .portfolio-border-text {
-    border: 1px solid #F4F4FD;
-    border-top: none;
-    padding: 32px 16px;
+  border: 1px solid #f4f4fd;
+  border-top: none;
+  padding: 32px 16px;
 }
 
 .footer {
-    background-color: #2E2F42;
-    font-family: "Roboto", sans-serif;
-    padding: 100px 0;
+  background-color: #2e2f42;
+  font-family: "Roboto", sans-serif;
+  padding: 100px 0;
 }
 
 .footer .container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
 }
 
 .footer-text {
-    font-weight: 400;
-    color: #F4F4FD;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    max-width: 264px;
+  font-weight: 400;
+  color: #f4f4fd;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  max-width: 264px;
 }
 
 .logo-footer {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
 }
 
 .logo-studio-footer {
-    color: #f4f4fd;
+  color: #f4f4fd;
 }
