--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ img {
 
 .header {
   background-color: #ffffff;
-  border: 1px solid black;
+  border: 1px solid #e7e9fc;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
@@ -82,6 +82,15 @@ section {
 .logo-studio {
   color: #2e2f42;
 }
+nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+
+}
 
 .nav-list {
   font-family: "Roboto", sans-serif;
@@ -123,6 +132,7 @@ section {
   padding: 0;
   display: flex;
   gap: 40px;
+  margin: 0;
 }
 
 .contact-link {
@@ -148,6 +158,7 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 188px 0;
 }
 
 .hero-title {
@@ -155,11 +166,10 @@ section {
   line-height: 1.07;
   color: #ffffff;
   letter-spacing: 0.02em;
-  width: 496px;
+  max-width: 496px;
   height: 120px;
   text-align: center;
   margin: 0 auto;
-  margin-top: 188px;
   margin-bottom: 48px;
 }
 
@@ -173,7 +183,7 @@ section {
   background-color: #4d5ae5;
   border: none;
   cursor: pointer;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   border-radius: 4px;
   margin-bottom: 188px;
@@ -205,6 +215,9 @@ section {
   justify-content: center;
   margin: 120px 0;
 }
+.advantages-item {
+  flex-basis: calc((100% - 72px) / 4);
+}
 
 .advantages-subtitle {
   font-family: "Roboto", sans-serif;
@@ -213,6 +226,7 @@ section {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
 .advantages-text {
@@ -222,10 +236,6 @@ section {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-}
-
-.advantages-item {
-  width: calc((100% - 72px) / 4);
 }
 
 .our-team {
@@ -260,6 +270,7 @@ section {
   object-fit: cover;
   overflow: hidden;
   width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .our-team-name {
@@ -270,7 +281,7 @@ section {
   letter-spacing: 0.02em;
   text-align: center;
   background-color: #ffffff;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .our-team-role {
@@ -283,12 +294,21 @@ section {
   background-color: #ffffff;
 }
 .our-team-text-block {
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 
 .portfolio {
   font-family: "Roboto", sans-serif;
   padding: 120px 0;
+}
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  row-gap: 48px;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
 }
 
 .portfolio-item {
@@ -296,10 +316,6 @@ section {
   object-fit: cover;
   overflow: hidden;
   width: calc((100%-48px) / 3);
-}
-
-.portfolio-item:nth-child(-n + 3) {
-  margin-bottom: 24px;
 }
 
 .portfolio-title {
@@ -313,22 +329,13 @@ section {
   margin-bottom: 72px;
 }
 
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
-  justify-content: center;
-  padding: 0;
-  margin: 0;
-}
-
 .portfolio-subtitle {
   font-weight: 500;
   color: #2e2f42;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 .portfolio-text {
   font-weight: 400;
@@ -340,7 +347,7 @@ section {
 }
 
 .portfolio-border-text {
-  border: 1px solid #f4f4fd;
+  border: 1px solid #e7e9fc;
   border-top: none;
   padding: 32px 16px;
 }
@@ -355,7 +362,18 @@ section {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 16px;
+}
+
+.logo-footer {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .footer-text {
@@ -367,15 +385,6 @@ section {
   max-width: 264px;
 }
 
-.logo-footer {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #4d5ae5;
-}
 
 .logo-studio-footer {
   color: #f4f4fd;
