--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,6 @@ nav{
 }
 
 .our-team-list {
-  list-style: none;
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
@@ -267,10 +266,10 @@ nav{
 }
 
 .our-team-item {
+  flex-basis: calc((100% - 72px) / 4);
   background-color: #ffffff;
   object-fit: cover;
   overflow: hidden;
-  width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -305,14 +304,16 @@ nav{
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 24px;
+  gap: 24px;
   row-gap: 48px;
+  margin: 0;
+  padding: 0;
 } 
 
 .portfolio-item {
- 
- 
-  width: calc((100%-48px) / 3);
+  flex-basis: calc((100%-48px) / 3);
+  object-fit: cover;
+  overflow: hidden;
 }
 
 .portfolio-title {
@@ -356,7 +357,6 @@ nav{
 }
 
 .footer .container {
-  display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
