--- a/css/styles.css
+++ b/css/styles.css
@@ -217,7 +217,7 @@ nav{
   margin: 120px 0;
 }
 .advantages-item {
-  flex-basis: calc((100% - 72px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 
 .advantages-subtitle {
@@ -311,9 +311,7 @@ nav{
 } 
 
 .portfolio-item {
-  flex-basis: calc((100%-48px) / 3);
-  object-fit: cover;
-  overflow: hidden;
+  width: calc((100%-48px) / 3);
 }
 
 .portfolio-title {
