--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,8 @@ a {
 ul {
   text-decoration: none;
   list-style-type: none;
+  padding-left: 0;
+  margin: 0;
 }
 
 li {
@@ -62,9 +64,6 @@ section {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
 }
 
 .logo-header {
@@ -87,9 +86,6 @@ nav{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
 
 }
 
@@ -187,7 +183,6 @@ nav{
   min-width: 169px;
   height: 56px;
   border-radius: 4px;
-  margin-bottom: 188px;
 }
 
 .hero-button:hover,
@@ -340,7 +335,6 @@ nav{
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding-bottom: 32px;
 }
 
 .portfolio-border-text {
