--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,7 @@ nav{
 }
 
 .nav-link {
+  position: relative;
   text-decoration: none;
   cursor: pointer;
   color: #2e2f42;
@@ -115,6 +116,19 @@ nav{
   color: #404bbf;
 }
 
+.nav-link.active{
+  color:  #404bbf;
+}
+
+.nav-link.active::after{
+  content:'';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height:4px;
+  background-color:#404bbf ;
+}
 .contacts {
   font-size: 16px;
   line-height: 1.5;
