--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,17 @@ nav{
 }
 
 .hero {
+ 
+  background-image:linear-gradient(
+  to bottom,
+   rgba(46, 47, 66, 0.7)
+  ), url(../images/herobaner.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
   background-color: #2e2f42;
   text-align: center;
   letter-spacing: 0.02em;
@@ -214,6 +225,16 @@ nav{
   clip-path: inset(100%);
   white-space: nowrap;
   border: 0;
+}
+.icon-advantages{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  border: 1px solid black;
+  border-radius: 4px;
+  margin: 0;
+  width: 100%;
 }
 
 .advantages-list {
